# mpc_valet

./: .gitignore  Cargo.toml  README.md  build_web.bat  index.html  keyboard-9e7c007241efe2d0.css  mpc_valet-5e525bc89bf54397.js  mpc_valet-5e525bc89bf54397_bg.wasm  mpc_valet-7354b69b976ca3ae.js  mpc_valet-7354b69b976ca3ae_bg.wasm  mpc_valet-8fae328799795ab9.js  mpc_valet-8fae328799795ab9_bg.wasm  mpc_valet-b2918f2ffbfea256.js  mpc_valet-b2918f2ffbfea256_bg.wasm  mpc_valet-b4ff7c2173db3a9b.js  mpc_valet-b4ff7c2173db3a9b_bg.wasm  mpc_valet-edfbb046f455e90c.js  mpc_valet-edfbb046f455e90c_bg.wasm  mpc_valet-f0f0d0f94b0aeace.js  mpc_valet-f0f0d0f94b0aeace_bg.wasm  mpc_valet-f10617e26ab111a9.js  mpc_valet-f10617e26ab111a9_bg.wasm  mpc_valet.js  mpc_valet_bg.wasm
.github/workflows/: ci.yml  release.yml  rust.yml
docs/: .gitignore  index.html  mpc_keygroup_creator.js  sw.js
src/: Reference.xpm  app.rs  export.rs  keyboard.rs  keygroup.rs  keygroup_program.rs  layer.rs  lib.rs  main.rs  midi.rs  midi_note_extensions.rs  parse.rs  process.rs  range.rs  static_iterable.rs
src/components/: app.rs  icon.rs  keyboard.rs  keygroup_creator.rs  keygroups_table.rs  layer_select.rs  layer_select_form.rs  mod.rs  note_select.rs  root_note_form.rs  step_add_samples.rs  step_done.rs  step_fine_tuning.rs  step_select_layers.rs  tuning_form.rs
src/model/: keygroup.rs  keygroup_program.rs  layer.rs  layer_file.rs  layer_velocity_mode.rs  mod.rs  sample_file.rs
src/ui/: app.rs  colored.rs  footer.rs  keyboard.rs  layering_mode_selector.rs  mod.rs  pitch_slider.rs  samples_area.rs  samples_table.rs  save_program_button.rs
src/utils/: export.rs  mod.rs  range.rs  static_iterable.rs
src/widgets/: header.rs  instructions.rs  mod.rs  samples_area.rs  samples_table.rs  save_program_button.rs
