[package]
name = "mpc_valet"
version = "0.3.9-dev"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "A tool for creating instrument for MPC drum machines."
readme = "README.md"
repository = "https://github.com/plule/mpc_valet"
license = "MIT OR Apache-2.0"

[dependencies]
staff = "0.5.0"
regex = "1"
xmltree = "0.10.3"
lazy_static = "1.4.0"
itertools = "0.11.0"
anyhow = "1.0.71"
pomsky-macro = "0.10.0"
yew = "0.19"
yew-utils = "0.2"
log = "0.4.19"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.85"
js-sys = "0.3.64"
serde = "1"
gloo-storage = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"HtmlSelectElement",
	"DragEvent",
	"DataTransfer",
	"FileList",
	"File",
]

[dev-dependencies]
rstest = "0.17.0"

[profile.release]
opt-level = 2 # fast and small wasm
