[package]
name = "mpc_valet"
version = "0.3.9-dev"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "A tool for creating instrument for MPC drum machines."
readme = "README.md"
repository = "https://github.com/plule/mpc_valet"
license = "MIT OR Apache-2.0"

[dependencies]
staff = "0.11.0"
regex = "1"
xmltree = "0.10.3"
lazy_static = "1.4.0"
itertools = "0.12.1"
anyhow = "1.0.79"
pomsky-macro = "0.11.0"
yew = "0.19"
yew-utils = "0.2"
log = "0.4.20"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.91"
js-sys = "0.3.67"
serde = "1"
gloo-storage = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
	"HtmlSelectElement",
	"DragEvent",
	"DataTransfer",
	"FileList",
	"File",
]

[dev-dependencies]
rstest = "0.18.2"

[profile.release]
opt-level = 2 # fast and small wasm
